updated for summer

--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
-			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
+			<p>
+				Thanks for a great 2017 - 2018 season!<br/><br/>
+				<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/>
+				to join our staff for the 2018 - 2019 school year.<br/>
+			</p><br/>
 			<!-- TODO: Copy and paste this block for show announcements and tickets
 			<img height="50%" width="50%" src="img/posters/file_name.png"/>
 			<p>
@@ -143,22 +147,6 @@
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			-->
-			<img height="75%" width="75%" src="img/posters/springjam2018.jpg"/>
-			<p>
-				<br>Star Course, the Illini Union Board,<br>and the State Farm Center present<br>
-				<b>Spring Jam ft. T-Pain</b><br>
-				<br>
-				<!-- with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
-				<br> -->
-				<b>Sunday April 29th, 2018<br></b>
-				on the Main Quad at 2pm<br><br>
-				Free Admission only with
-				UIUC Student I-Card,<br>
-				No exceptions
-				<br><br>
-				<a href="https://www.facebook.com/events/1334768146668657/" 
-					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
@@ -428,7 +416,7 @@
 			<p> 
 				Any questions? Contact 
 				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br>
-				Senior Managers: Kate and Nick.
+				Senior Managers: Claudia and Reilly.
 			</p>
 			<p>
 				Follow us at @starcourseuiuc for the latest Star Course updates!
