added tpain poster

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 					<img src="img/posters/joywave_poster.png" title="Joywave" height="250">
 					<img src="img/posters/waka_poster.jpg" title="Waka Flocka Flame" height="250">
 					<img src="img/posters/strfkr.jpg" title="STRFKR" height="250">
+					<img src="img/posters/springjam2018.jpg" title="Spring Jam T-Pain" height="250">
 					<p><br></p>
 				</div>
 				<br>
