--- a/index.html
+++ b/index.html
@@ -116,38 +116,72 @@
 				<h2>UPCOMING EVENTS</h2>
 				<div class="col-lg-8 col-lg-offset-2">
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
-					<p>
+					<!-- <p>
 						Thanks for a great 2017 - 2018 season!<br/><br/>
 						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br/>
-					</p><br/>
+					</p><br/> -->
 					<!-- TODO: Copy and paste this block for show announcements and tickets
-			<img height="50%" width="50%" src="img/posters/file_name.png"/>
-			<p>
-				<br>Star Course presents<br>
-				<b>Artist Name</b><br>
-				<br>
-				with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
-				<br>
-				<b>Weekday Month Day, Year<br></b>
-				Doors 6:30pm | Show 7:30pm<br>
-				Students $XX | Public $XX<br>
-				<br>
-				<b>Foellinger Auditorium</b><br>
-				709 S Mathews Ave<br>
-				Urbana, IL 61801<br>
-				<br>
-				Additional online service fees apply.<br>
-				Foellinger Auditorium is reserved seating only.<br>
-				No backpacks, food, or drink allowed.<br>
-				Foellinger Auditorium is a non-smoking venue.<br><br>
-				<a href="student ticket link here"
-					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-				<a href="public ticket link here"
-					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-				<a href="facebook event link here"
-					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-			</p>
-			-->
+					<img height="50%" width="50%" src="img/posters/TODO file_name.png"/>
+					<p>
+						<br>Star Course presents<br>
+						<b>TODO Artist Name</b><br>
+						<br>
+						with opener <i><a href="TODO link here" style="border-bottom:1px dashed #ccc;">TODO Artist Name</a></i><br>
+						<br>
+						<b>Weekday Month Day, Year<br></b>
+						Doors 6:30pm | Show 7:30pm<br>
+						Students $XX | Public $XX<br>
+						<br>
+						<b>Foellinger Auditorium</b><br>
+						709 S Mathews Ave<br>
+						Urbana, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						Foellinger Auditorium is reserved seating only.<br>
+						No backpacks, food, or drink allowed.<br>
+						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<a href="TODO student ticket link here"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="TODO public ticket link here"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+					 	<a href="TODO facebook event link here"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+					</p> -->
+					<p>
+						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br><br>
+						Our booth will be between Gregory Hall and Lincoln Hall<br>with the State Farm Center booth.
+					</p>
+					<hr style="border-top: dotted 1px;" /><br>
+					<!-- Paste here: -->
+					<img height="50%" width="50%" src="img/posters/jessemccartney.jpg"/>
+					<p>
+						<br>Star Course presents<br>
+						<b>Jesse McCartney</b><br>
+						<!-- <br>
+						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br> -->
+						<br>
+						<b>Saturday October 6th, 2018<br></b>
+						Doors 6:30pm | Show 7:30pm<br>
+						<br>
+						Students $18 | Public $25<br>
+						VIP Meet & Greet $40<br>
+						* VIP does not include entry ticket <br>
+						<br>
+						<b>Foellinger Auditorium</b><br>
+						709 S Mathews Ave<br>
+						Urbana, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						Foellinger Auditorium is reserved seating only.<br>
+						No backpacks, food, or drink allowed.<br>
+						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE18%3A1006%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+						<!-- <a href="facebook event link here"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+					</p>
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
 					<script>
