added info nights and quad day

--- a/history.html
+++ b/history.html
@@ -7,17 +7,17 @@
 	<!-- meta og:x tags are for Facebook -->
 	<meta property="og:title" content="Star Course UIUC"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://star-course.com"/> 
+	<meta property="og:url" content="http://star-course.com"/>
 	<!-- TODO: Change link to image for link shared on Facebook -->
 	<meta property="og:image" content="https://github.com/starcourse/starcourse.github.com/blob/master/img/website_icon.jpg?raw=true"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="630"/>
-	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
-		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
+	<meta property="og:description" content="Star Course is a live-concert promotion and production organization
+		run by students for students at the University of Illinois at Urbana-Champaign. Members participate
 		in all levels of event planning to contract, promote, and stage campus entertainment.">
 	<!-- meta name tags are for search engines -->
 	<meta name="title" content="Star Course History">
-	<meta name="description" content="Star Course is a student-run concert promotion and production organization 
+	<meta name="description" content="Star Course is a student-run concert promotion and production organization
 		at the University of Illinois at Urbana-Champaign.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
@@ -65,9 +65,9 @@
 			<li>
 				<a href="index.html#about">About</a>
 			</li>
-			<li>
+			<!--<li>
 				<a href="#history">History</a>
-			</li>
+			</li>-->
 			<li>
 				<a href="index.html#staff">Staff</a>
 			</li>
@@ -92,7 +92,7 @@
 <!-- Intro Header -->
 <!-- TODO: Change background image in theme.css -->
 <header class="intro">
-<a name="intro"></a> 
+<a name="intro"></a>
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
@@ -108,18 +108,18 @@
 </header>
 <!-- History Section -->
 <section id="history">
-<a name="history"></a> 
+<a name="history"></a>
 <div class="container content-section text-center">
 	<div class="row">
 		<h2>History</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<p class="text-left">Star Course is the University of Illinois’s oldest student-run organization dating back to 1892. Designed 
-				to contract, promote, and stage campus entertainment, Star Course brought its first orchestra 
-				to the University in 1912. Throughout the past century the organization has broadened its scope to alternative, rock, 
-				comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular 
+			<p class="text-left">Star Course is the University of Illinois’s oldest student-run organization dating back to 1892. Designed
+				to contract, promote, and stage campus entertainment, Star Course brought its first orchestra
+				to the University in 1912. Throughout the past century the organization has broadened its scope to alternative, rock,
+				comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular
 				entertainment to the University and the C-U community. In 2017 Star Course celebrated 125 years of entertainment at UIUC.</p>
-			<p class="text-left">If you were involved in Star Course back in the day and want to share your experiences, have any memorabilia, 
-				or know any bands we've forgotten, please contact us at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>. 
+			<p class="text-left">If you were involved in Star Course back in the day and want to share your experiences, have any memorabilia,
+				or know any bands we've forgotten, please contact us at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.
 				We'd love to hear your story!
 			</p><br>
 			<p><b>1919</b><br>
@@ -150,7 +150,7 @@
 				Robert Shaw Chorale<br>
 				Leonard Warren<br>
 				Joseph Szigeti<br>
-				Eugene Ormandy<br> 
+				Eugene Ormandy<br>
 				Leon Fleischer<br>
 				Glenn Gould<br>
 				Stan Kenton, June Christy and The Four Freshmen<br>
@@ -179,7 +179,7 @@
 			</p>
 			<p><b>1970-71</b><br>
 				Four Tops<br>
-				The Byrds w/ Head East<br> 
+				The Byrds w/ Head East<br>
 				James Taylor<br>
 				Sly and the Family Stone<br>
 				Ten Years After<br>
@@ -188,7 +188,7 @@
 			<p><b>1972-73</b><br>
 				Elton John<br>
 				Moody Blues<br>
-				Jefferson Airplane<br> 
+				Jefferson Airplane<br>
 				Cat Stevens<br>
 			</p>
 			<p><b>1973-74</b><br>
@@ -267,10 +267,10 @@
 				Todd Rundgren<br>
 				Pat Metheny Group<br>
 				Jackson Browne<br>
-				Elvis Costello<br> 
+				Elvis Costello<br>
 				T-bone Burnett<br>
 				Chris Stamey<br>
-				Wire Train<br> 
+				Wire Train<br>
 				Big Country<br>
 			</p>
 			<p><b>1985-86</b><br>
@@ -504,6 +504,9 @@
 				STRFKR<br>
 				T-Pain (Spring Jam)<br>
 			</p>
+			<p><b>2018-2019</b><br>
+				Jesse McCartney<br>
+			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
 				BandName1<br>
@@ -527,8 +530,8 @@
 		Star Course Concert Committee<br>
 		University of Illinois at Urbana-Champaign<br>
 		Established 1892<br><br>
-		<a href="https://www.facebook.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Facebook</a> 
-			● <a href="https://twitter.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Twitter</a> 
+		<a href="https://www.facebook.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Facebook</a>
+			● <a href="https://twitter.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Twitter</a>
 			● <a href="https://instagram.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Instagram</a><br><br>
 		"Aries" Template by WowThemes.net
 	</p>
