--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 					<li>
 						<a href="#about">About</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="history.html#history">History</a>
-					</li>
+					</li> -->
 					<li>
 						<a href="#staff">Staff</a>
 					</li>
@@ -148,8 +148,12 @@
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 					</p> -->
 					<p>
-						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br><br>
-						Our booth will be between Gregory Hall and Lincoln Hall<br>with the State Farm Center booth.
+						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br>
+						Our booth will be between Gregory Hall and Lincoln Hall<br>with the State Farm Center booth.<br><br>
+						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
+							at 6:30pm in Gregory Hall Room 311.<br>
+							Come learn more about joining Star Course!<br><br>
+						<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
 					</p>
 					<hr style="border-top: dotted 1px;" /><br>
 					<!-- Paste here: -->
@@ -310,6 +314,13 @@
 						the past century the organization has broadened its scope to alternative, rock, comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular entertainment to the University and the C-U community.
 						In 2017, Star Course celebrated 125 years of entertainment at UIUC.
 					</p>
+				</div>
+				<div class="text-center">
+					<a href="history.html#history"><button id="historyButton" class="btnghost" style="margin-top: 50px; margin-bottom: 50px;">
+						<span id="historyButtonSpan">See more history</span><i id="historyButton" class="fa fa-caret-right fa-fw"></i>
+					</button></a>
+				</div>
+				<div class="col-lg-8 col-lg-offset-2">
 					<p>
 						<b>Organization:</b> Star Course is a non-profit, student-operated organization under the advisory of the State Farm Center in Champaign, IL. As a university talent-buying group, Star Course is remarkably independent. While many schools have small
 						entertainment boards comprised of both faculty and students, Star Course is all students from top to bottom.
