changed event text

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</p> -->
 					<p>
 						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br>
-						Our booth will be between Gregory Hall and Lincoln Hall<br>with the State Farm Center booth.<br><br>
+						You can find us between Gregory Hall and Lincoln Hall<br>with the State Farm Center booth.<br><br>
 						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
 							at 6:30pm in Gregory Hall Room 311.<br>
 							Come learn more about joining Star Course!<br><br>
