added post quad-day info

--- a/index.html
+++ b/index.html
@@ -148,13 +148,16 @@
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 					</p> -->
 					<p>
-						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br>
-						You can find us between Gregory Hall and Lincoln Hall<br>with the State Farm Center booth.<br><br>
+						If you missed us at Quad Day but are still interested in joining,<br>
+						please contact us with any questions at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br><br>
 						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
-							at 6:30pm in Gregory Hall Room 311.<br>
-							Come learn more about joining Star Course!<br><br>
-						<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
+						at 6:30pm in Gregory Hall Room 311.<br>
+						Come learn more about joining Star Course!<br><br>
+						If you can't make the info nights, come to our first<br>
+						<b>All Staff Meeting on Tues. September 4th</b><br>
+						in Foellinger Auditorium (time TBD).
 					</p>
+					<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
 					<hr style="border-top: dotted 1px;" /><br>
 					<!-- Paste here: -->
 					<img height="50%" width="50%" src="img/posters/jessemccartney.jpg"/>
