--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE18%3A1006%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-						<!-- <a href="facebook event link here"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+						<a href="https://www.facebook.com/events/241866309861082/"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 					</p>
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
