--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						Come learn more about joining Star Course!<br><br>
 						If you can't make the info nights, come to our first<br>
 						<b>All Staff Meeting on Tues. September 4th</b><br>
-						in Foellinger Auditorium at 6pm.
+						at 6pm in Foellinger Auditorium.
 					</p>
 					<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
 					<hr style="border-top: dotted 1px;" /><br>
