--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					 	<a href="TODO facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 					</p> -->
-					<p>
+					<!--<p>
 						If you missed us at Quad Day but are still interested in joining,<br>
 						please contact us with any questions at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br><br>
 						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
@@ -158,37 +158,10 @@
 						at 6pm in Foellinger Auditorium.
 					</p>
 					<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
-					<hr style="border-top: dotted 1px;" /><br>
-					<!-- Paste here: -->
-					<img height="50%" width="50%" src="img/posters/jessemccartney.jpg"/>
-					<p>
-						<br>Star Course presents<br>
-						<b>Jesse McCartney</b><br>
-						<!-- <br>
-						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br> -->
-						<br>
-						<b>Saturday October 6th, 2018<br></b>
-						Doors 6:30pm | Show 7:30pm<br>
-						<br>
-						Students $18 | Public $25<br>
-						VIP Meet & Greet $40<br>
-						* VIP does not include entry ticket <br>
-						<br>
-						<b>Foellinger Auditorium</b><br>
-						709 S Mathews Ave<br>
-						Urbana, IL 61801<br>
-						<br>
-						Additional online service fees apply.<br>
-						Foellinger Auditorium is reserved seating only.<br>
-						No backpacks, food, or drink allowed.<br>
-						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE18%3A1006%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-						<a href="https://www.facebook.com/events/241866309861082/"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-					</p>
+					<hr style="border-top: dotted 1px;" /><br> -->
+					<!-- TODO Paste here: -->
+					<p>Stay tuned for our next show announcement!</p>
+					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
 					<script>
@@ -214,16 +187,22 @@
 					<div id="posters" style="display:none;">
 						<br>
 						<!-- TODO: Duplicate this block to add shows and seasons to this section
-				<div class="row">
-					<h4 class="text-center"> 20XX - 20YY Season: </h4>
-					<img src="img/posters/[image file name]" title="[artist name]" height="250">
-					<img src="img/posters/[image file name]" title="[artist name]" height="250">
-					<img src="img/posters/[image file name]" title="[artist name]" height="250">
-					<img src="img/posters/[image file name]" title="[artist name]" height="250">
-					<p><br></p>
-				</div>
-				<br>
-				-->
+						<div class="row">
+							<h4 class="text-center"> 20XX - 20YY Season: </h4>
+							<img src="img/posters/[image file name]" title="[artist name]" height="250">
+							<img src="img/posters/[image file name]" title="[artist name]" height="250">
+							<img src="img/posters/[image file name]" title="[artist name]" height="250">
+							<img src="img/posters/[image file name]" title="[artist name]" height="250">
+							<p><br></p>
+						</div>
+						<br>
+						-->
+						<div class="row">
+							<h4 class="text-center"> 2018 - 2019 Season: </h4>
+							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney" height="250">
+							<p><br></p>
+						</div>
+						<br>
 						<div class="row">
 							<h4 class="text-center"> 2017 - 2018 Season: </h4>
 							<img src="img/posters/joywave_poster.png" title="Joywave" height="250">
