--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<a href="TODO facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-					</p> -->
+					</p>
+					 End Copy -->
 					<!--<p>
 						If you missed us at Quad Day but are still interested in joining,<br>
 						please contact us with any questions at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br><br>
@@ -160,7 +161,31 @@
 					<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
 					<hr style="border-top: dotted 1px;" /><br> -->
 					<!-- TODO Paste here: -->
-					<p>Stay tuned for our next show announcement!</p>
+					<img height="50%" width="50%" src="img/posters/lovelytheband.jpg"/>
+					<p>
+						<br>Star Course presents<br>
+						<b>lovelytheband</b><br>
+						<br>
+						<b>Wednesday December 5th, 2018<br></b>
+						Doors 6:30pm | Show 7:30pm<br>
+						Students $14 | Public $20<br>
+						<br>
+						<b>Foellinger Auditorium</b><br>
+						709 S Mathews Ave<br>
+						Urbana, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						Foellinger Auditorium is reserved seating only.<br>
+						No backpacks, food, or drink allowed.<br>
+						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<b>Tickets go on sale Thursday November 1st.<br>Follow us @starcourseuiuc for updates.<br>
+						<!--<a href="TODO student ticket link here"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="TODO public ticket link here"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+					 	<a href="TODO facebook event link here"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>-->
+					</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
