--- a/history.html
+++ b/history.html
@@ -506,6 +506,7 @@
 			</p>
 			<p><b>2018-2019</b><br>
 				Jesse McCartney<br>
+				lovelytheband<br>
 			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
