--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<b>Tickets go on sale Thursday November 1st.<br>Follow us @starcourseuiuc for updates.<br></b>
+						<b>Tickets go on sale Wednesday October 31st at 10am.<br></b>
 						<!--<a href="TODO student ticket link here"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 						<a href="TODO public ticket link here"
