lovely the tickets

--- a/index.html
+++ b/index.html
@@ -178,13 +178,12 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<b>Tickets go on sale Wednesday October 31st at 10am.<br></b>
-						<!--<a href="TODO student ticket link here"
+						<a href="https://goo.gl/hK3X8C"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="TODO public ticket link here"
+						<a href="https://goo.gl/p5D4Mq"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-					 	<a href="TODO facebook event link here"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>-->
+					 	<a href="https://www.facebook.com/events/587018331733349/"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 					</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
