fixed lovely links

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE18%3A1205%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=ST%3AILLINOIS%3AE18%3A1205%3AS03&linkID=illinois&shopperContext=ST&pc=&caller=&appCode=&groupCode=S&cgc="
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE18%3A1205%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
