--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			<div class="row">
 				<h2>UPCOMING EVENTS</h2>
 				<div class="col-lg-8 col-lg-offset-2">
-					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
+					<p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p>
 					<!-- <p>
 						Thanks for a great 2017 - 2018 season!<br/><br/>
 						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br/>
@@ -161,30 +161,6 @@
 					<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
 					<hr style="border-top: dotted 1px;" /><br> -->
 					<!-- TODO Paste here: -->
-					<img height="50%" width="50%" src="img/posters/lovelytheband.jpg"/>
-					<p>
-						<br>Star Course presents<br>
-						<b>lovelytheband</b><br>
-						<br>
-						<b>Wednesday December 5th, 2018<br></b>
-						Doors 6:30pm | Show 7:30pm<br>
-						Students $14 | Public $20<br>
-						<br>
-						<b>Foellinger Auditorium</b><br>
-						709 S Mathews Ave<br>
-						Urbana, IL 61801<br>
-						<br>
-						Additional online service fees apply.<br>
-						Foellinger Auditorium is reserved seating only.<br>
-						No backpacks, food, or drink allowed.<br>
-						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=ST%3AILLINOIS%3AE18%3A1205%3AS03&linkID=illinois&shopperContext=ST&pc=&caller=&appCode=&groupCode=S&cgc="
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE18%3A1205%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-					 	<a href="https://www.facebook.com/events/587018331733349/"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-					</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
