added lovely poster

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 						<div class="row">
 							<h4 class="text-center"> 2018 - 2019 Season: </h4>
 							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney" height="250">
+							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" height="250">
 							<p><br></p>
 						</div>
 						<br>
