--- a/index.html
+++ b/index.html
@@ -116,17 +116,19 @@
 				<h2>UPCOMING EVENTS</h2>
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p>
-					<!-- <p>
+					<!-- TODO: End of spring semester
+					<p>
 						Thanks for a great 2017 - 2018 season!<br/><br/>
 						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br/>
-					</p><br/> -->
-					<!-- TODO: Copy and paste this block for show announcements and tickets
-					<img height="50%" width="50%" src="img/posters/TODO file_name.png"/>
+					</p><br/>
+					-->
+					<!-- TODO: Show announcements and tickets
+					<img height="50%" width="50%" src="img/posters/file_name.png"/>
 					<p>
 						<br>Star Course presents<br>
-						<b>TODO Artist Name</b><br>
+						<b>Artist Name</b><br>
 						<br>
-						with opener <i><a href="TODO link here" style="border-bottom:1px dashed #ccc;">TODO Artist Name</a></i><br>
+						with opener <i><a href= link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br>
 						<b>Weekday Month Day, Year<br></b>
 						Doors 6:30pm | Show 7:30pm<br>
@@ -140,15 +142,16 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="TODO student ticket link here"
+						<a href="student ticket link here"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="TODO public ticket link here"
+						<a href="public ticket link here"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-					 	<a href="TODO facebook event link here"
+					 	<a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 					</p>
-					 End Copy -->
-					<!--<p>
+					-->
+					<!-- TODO: Post-Quad Day
+					<p>
 						If you missed us at Quad Day but are still interested in joining,<br>
 						please contact us with any questions at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br><br>
 						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
@@ -159,8 +162,11 @@
 						at 6pm in Foellinger Auditorium.
 					</p>
 					<img height="50%" width="50%" src="img/infonightflyer2018.jpg"/>
-					<hr style="border-top: dotted 1px;" /><br> -->
+					<hr style="border-top: dotted 1px;" /><br>
+					-->
 					<!-- TODO Paste here: -->
+
+
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
@@ -181,8 +187,8 @@
 					</script>
 					<p>
 						<button id="posterButton" class="btnghost" onclick="showPosters()">
-					<i id="posterButtonI" class="fa fa-caret-down fa-fw"></i><span id="posterButtonSpan">Click to show</span>
-				</button>
+							<i id="posterButtonI" class="fa fa-caret-down fa-fw"></i><span id="posterButtonSpan">Click to show</span>
+						</button>
 					</p>
 					<div id="posters" style="display:none;">
 						<br>
