fixed repo name change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 					<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 			<![endif]-->
-	<!-- TODO: Set favicon (browser tab icon) -->
+	<!-- TODO Set favicon (browser tab icon) -->
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
 
