--- a/history.html
+++ b/history.html
@@ -507,6 +507,7 @@
 			<p><b>2018-2019</b><br>
 				Jesse McCartney<br>
 				lovelytheband<br>
+				Smino<br>
 			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
