--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<meta property="og:title" content="Star Course UIUC" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://star-course.com" />
-	<!-- TODO: Change link to image for link shared on Facebook -->
 	<meta property="og:image" content="https://github.com/starcourse/starcourse.github.com/blob/master/img/website_icon.jpg?raw=true" />
 	<meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="630" />
@@ -115,7 +114,9 @@
 			<div class="row">
 				<h2>UPCOMING EVENTS</h2>
 				<div class="col-lg-8 col-lg-offset-2">
+					<!-- TODO: End of fall Semester
 					<p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p>
+					-->
 					<!-- TODO: End of spring semester
 					<p>
 						Thanks for a great 2017 - 2018 season!<br/><br/>
@@ -128,7 +129,7 @@
 						<br>Star Course presents<br>
 						<b>Artist Name</b><br>
 						<br>
-						with opener <i><a href= link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
+						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br>
 						<b>Weekday Month Day, Year<br></b>
 						Doors 6:30pm | Show 7:30pm<br>
@@ -166,6 +167,30 @@
 					-->
 					<!-- TODO Paste here: -->
 
+					<img height="50%" width="50%" src="img/posters/smino.jpg"/>
+					<p>
+						<br>Star Course presents<br>
+						<b>Smino</b><br>
+						<br>
+						<b>Thursday February 21, 2019<br></b>
+						Doors 6:30pm | Show 7:30pm<br>
+						Students $15 | Public $22<br>
+						<br>
+						<b>Foellinger Auditorium</b><br>
+						709 S Mathews Ave<br>
+						Urbana, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						Foellinger Auditorium is reserved seating only.<br>
+						No backpacks, food, or drink allowed.<br>
+						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=SMINO&linkID=illinois&shopperContext=&caller=&appCode="
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+					 	<a href="https://www.facebook.com/events/2100418226670914/"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+					</p>
 
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
@@ -207,6 +232,7 @@
 							<h4 class="text-center"> 2018 - 2019 Season: </h4>
 							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney" height="250">
 							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" height="250">
+							<img src="img/posters/smino.jpg" title="lovelytheband" height="250">
 							<p><br></p>
 						</div>
 						<br>
