--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
 							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney" height="250">
 							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" height="250">
 							<img src="img/posters/smino.jpg" title="lovelytheband" height="250">
+							<img src="img/posters/springjam2019.jpg" title="Spring Jam Lil Yachty" height="250">
 							<p><br></p>
 						</div>
 						<br>
