--- a/history.html
+++ b/history.html
@@ -508,6 +508,7 @@
 				Jesse McCartney<br>
 				lovelytheband<br>
 				Smino<br>
+				Lil Yachty (Spring Jam)<br>
 			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
