--- a/index.html
+++ b/index.html
@@ -169,27 +169,10 @@
 
 					<img height="50%" width="50%" src="img/posters/smino.jpg"/>
 					<p>
-						<br>Star Course presents<br>
-						<b>Smino</b><br>
-						<br>
-						<b>Thursday February 21, 2019<br></b>
-						Doors 6:30pm | Show 7:30pm<br>
-						Students $15 | Public $22<br>
-						<br>
-						<b>Foellinger Auditorium</b><br>
-						709 S Mathews Ave<br>
-						Urbana, IL 61801<br>
-						<br>
-						Additional online service fees apply.<br>
-						Foellinger Auditorium is reserved seating only.<br>
-						No backpacks, food, or drink allowed.<br>
-						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=SMINO&linkID=illinois&shopperContext=&caller=&appCode="
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-					 	<a href="https://www.facebook.com/events/2100418226670914/"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+						<p>
+							Thanks for a great 2018 - 2019 season!<br/><br/>
+							<b>Find us at Quad Day on Sunday August 25th, 2019</b><br/> to join our staff for the 2019 - 2020 school year.<br/>
+						</p><br/>
 					</p>
 
 					<!-- End Paste -->
