--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 					<!-- TODO: Change contact info for senior managers -->
 					<p>
 						Any questions? Contact
-						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br> Senior Managers: Claudia and Reilly.
+						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br> Senior Managers: Leyla and Joey.
 					</p>
 					<p>
 						Follow us at @starcourseuiuc for the latest Star Course updates!
