--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 
 						<p>
 							Thanks for a great 2018 - 2019 season!<br/><br/>
-							<b>Find us at Quad Day on Sunday August 25th, 2019</b><br/> to join our staff for the 2019 - 2020 school year.<br/>
+							<b>Find us at Quad Day on Sunday August 25th, 2019</b><br/> to join our staff for the 2019 - 2020 school year.<br/><br/>
+							<b> And come to Info Nights on either August 28th or 29th at Everitt Labratory</b><br/> to learn more about us and how to get involved.<br/>
+							<a href="https://www.facebook.com/events/360876804836551/?event_time_id=360876808169884" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">RSVP here</span></a>
 						</p><br/>
 
 					<!-- End Paste -->
