--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					-->
 					<!-- TODO Paste here: -->
 
-
+					<img height="50%" width="50%" src="img/posters/doja.jpg"/>
 
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
