--- a/index.html
+++ b/index.html
@@ -167,8 +167,30 @@
 					-->
 					<!-- TODO Paste here: -->
 
-
-
+					<img height="50%" width="50%" src="img/posters/doja.jpg"/>
+										<p>
+														<br>Star Course presents<br>
+														<b>Doja Cat</b><br>
+														<b>Monday October 14th, 2019<br></b>
+														Doors 6:30pm | Show 7:30pm<br>
+														Students $15 | Public $22<br>
+														<br>
+														<b>Foellinger Auditorium</b><br>
+														709 S Mathews Ave<br>
+														Urbana, IL 61801<br>
+														<br>
+														Additional online service fees apply.<br>
+														Foellinger Auditorium is reserved seating only.<br>
+														No backpacks, food, or drink allowed.<br>
+														Foellinger Auditorium is a non-smoking venue.<br><br>
+														<b> Tickets On Sale September 14th, 2019 </b>
+														<!-- <a href="student ticket link here"
+															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+														<a href="public ticket link here"
+															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+														<a href="facebook event link here"
+															 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+													</p> -->
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
