--- a/index.html
+++ b/index.html
@@ -183,14 +183,13 @@
 														Foellinger Auditorium is reserved seating only.<br>
 														No backpacks, food, or drink allowed.<br>
 														Foellinger Auditorium is a non-smoking venue.<br><br>
-														<b> Tickets On Sale September 14th, 2019 </b>
-														<!-- <a href="student ticket link here"
+														<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
 															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-														<a href="public ticket link here"
+														<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=DC&linkID=illinois&shopperContext=&caller=&appCode="
 															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-														<a href="facebook event link here"
+														<a href="https://www.facebook.com/events/399464974094427/"
 															 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-													</p> -->
+													</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
