--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
 															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 														<a href="https://www.facebook.com/events/399464974094427/"
 															 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+														<a href="https://docs.google.com/forms/d/e/1FAIpQLSdojxDufuXwCnJjYG85qwZyQB7PgkVkcygRJK8LQASgm46vUw/viewform"
+	 														 class="btnghost" target="_blank"></i> Opener Contest Submission</a><br>
+
 													</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
