--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 														<a href="https://www.facebook.com/events/399464974094427/"
 															 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-														<a href="https://docs.google.com/forms/d/e/1FAIpQLSdojxDufuXwCnJjYG85qwZyQB7PgkVkcygRJK8LQASgm46vUw/viewform"
-	 														 class="btnghost" target="_blank"></i> Opener Contest Submission</a><br>
+														<a href="https://docs.google.com/forms/d/e/1FAIpQLSfudSwz349w9ezTtSm9vHRcQ3oD4VLyUsfGYl-qSir6tffeQg/viewform"
+	 														 class="btnghost" target="_blank"></i> Opener Contest Voting</a><br>
 
 													</p>
 					<!-- End Paste -->
