--- a/index.html
+++ b/index.html
@@ -166,33 +166,10 @@
 					<hr style="border-top: dotted 1px;" /><br>
 					-->
 					<!-- TODO Paste here: -->
-
-					<img height="50%" width="50%" src="img/posters/doja.jpg"/>
 										<p>
-														<br>Star Course presents<br>
-														<b>Doja Cat</b><br>
-														<b>Monday October 14th, 2019<br></b>
-														Doors 6:30pm | Show 7:30pm<br>
-														Students $15 | Public $22<br>
-														<br>
-														<b>Foellinger Auditorium</b><br>
-														709 S Mathews Ave<br>
-														Urbana, IL 61801<br>
-														<br>
-														Additional online service fees apply.<br>
-														Foellinger Auditorium is reserved seating only.<br>
-														No backpacks, food, or drink allowed.<br>
-														Foellinger Auditorium is a non-smoking venue.<br><br>
-														<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
-															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-														<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=DC&linkID=illinois&shopperContext=&caller=&appCode="
-															 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-														<a href="https://www.facebook.com/events/399464974094427/"
-															 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-														<a href="https://docs.google.com/forms/d/e/1FAIpQLSfudSwz349w9ezTtSm9vHRcQ3oD4VLyUsfGYl-qSir6tffeQg/viewform"
-	 														 class="btnghost" target="_blank"></i> Opener Contest Voting</a><br>
-
-													</p>
+											Thank you to everyone who came out to see Doja Cat<br>
+											<br><b> Next announcement coming soon!</b>
+										</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
@@ -230,10 +207,16 @@
 						<br>
 						-->
 						<div class="row">
+							<h4 class="text-center"> 2019 - 2020 Season: </h4>
+							<img src="img/posters/doja.jpg" title="Doja Cat" height="250">
+							<p><br></p>
+						</div>
+						<br>
+						<div class="row">
 							<h4 class="text-center"> 2018 - 2019 Season: </h4>
 							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney" height="250">
 							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" height="250">
-							<img src="img/posters/smino.jpg" title="lovelytheband" height="250">
+							<img src="img/posters/smino.jpg" title="Smino" height="250">
 							<img src="img/posters/springjam2019.jpg" title="Spring Jam Lil Yachty" height="250">
 							<p><br></p>
 						</div>
