--- a/index.html
+++ b/index.html
@@ -166,10 +166,31 @@
 					<hr style="border-top: dotted 1px;" /><br>
 					-->
 					<!-- TODO Paste here: -->
-										<p>
-											Thank you to everyone who came out to see Doja Cat<br>
-											<br><b> Next announcement coming soon!</b>
-										</p>
+					<img height="50%" width="50%" src="img/posters/peachpit.jpg"/>
+					<p>
+						<br>Star Course Presents:<br>
+						<b>Peach Pit</b><br>
+						<br>
+						<b>Saturday November 16th, 2019<br></b>
+						Doors 6:30pm | Show 7:30pm<br>
+						Students $12 | Public $18<br>
+						<br>
+						<b>Foellinger Auditorium</b><br>
+						709 S Mathews Ave<br>
+						Urbana, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						Foellinger Auditorium is reserved seating only.<br>
+						No backpacks, food, or drink allowed.<br>
+						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE19%3A1116%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=PP&cgc=&dataAccId=863&locale=en_US&siteId=ev_illinois&poolId=pac8-evcluster1&sDomain=ev11.evenue.net"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+						<a href="https://www.facebook.com/events/504463746768414/"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+					</p>
+				</p>
 					<!-- End Paste -->
 					<hr style="border-top: dotted 1px;" /><br><br>
 					<h3>PREVIOUS EVENTS</h3>
