--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 					<p>
 						<br>Star Course Presents:<br>
 						<b>Peach Pit</b><br>
+						with opener <i><a href="https://open.spotify.com/artist/7c7Ssa5WkCbsvQkjKGBztw?si=u0rO25yfT0-nF0i6vIoNvQ" style="border-bottom:1px dashed #ccc;">Ex Okays</a></i><br>
 						<br>
 						<b>Saturday November 16th, 2019<br></b>
 						Doors 6:30pm | Show 7:30pm<br>
