--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<b>Online advance ticket sales have CLOSED! Tickets will be sold at the door beginning at 6:30pm on the day of show.</b><br><br>
 						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 						<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE19%3A1116%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=PP&cgc=&dataAccId=863&locale=en_US&siteId=ev_illinois&poolId=pac8-evcluster1&sDomain=ev11.evenue.net"
