--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 						<a href="https://www.facebook.com/events/171927087435155/"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+						<a href="https://tinyurl.com/earthgangopener"
+	 						 class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
 					</p>
 				</p>
 					<!-- End Paste -->
