--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 						<div class="row">
 							<h4 class="text-center"> 2019 - 2020 Season: </h4>
 							<img src="img/posters/doja.jpg" title="Doja Cat" height="250">
+							<img src="img/posters/peachpit.jpg" title="Peach Pit" height="250">
 							<p><br></p>
 						</div>
 						<br>
