--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
 					<!-- TODO: End of spring semester -->
 					<p>Thanks for a great 2019 - 2020 season!<br/><br/>
 						<b>find us in the fall @starcourseuiuc</b>
+						<br/> to join our staff for the 2020 - 2021 school year.
+						<br/>
 						<i class="fa fa-facebook fa-fw"></i>
 						<i class="fa fa-twitter fa-fw"></i>
-						<i class="fa fa-instagram fa-fw"></i>
-						<br/> to join our staff for the 2020 - 2021 school year.
+						<i class="fa fa-instagram fa-fw"></i><br />
 					</p>
 					<br/>
 
@@ -294,6 +295,7 @@
 							<img src="img/posters/americanfootball.png" title="American Football" height="250">
 							<img src="img/posters/vince.png" title="Vince Staples" height="250">
 							<img src="img/posters/noname.jpg" title="Noname" height="250">
+							<img src="img/posters/springjam2017.jpg" title="Spring Jam Post Malone" height="150">
 							<p><br></p>
 						</div>
 						<br>
@@ -464,7 +466,7 @@
 						Any questions? Contact
 						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>
 						<br>
-						2020-2021 Senior Managers: Leyla and Sarah
+						2020-2021 Senior Managers: <br />Leyla and Sarah
 					</p>
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
