Vince error fixed

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 							<h4 class="text-center"> 2016 - 2017 Season </h4>
 							<img src="img/posters/neonindian.png" title="Neon Indian" height="250">
 							<img src="img/posters/americanfootball.png" title="American Football" height="250">
-							<img src="img/posters/vince.png" title="Vince Staples" height="250">
+							<img src="img/posters/Vince.png" title="Vince Staples" height="250">
 							<img src="img/posters/noname.jpg" title="Noname" height="250">
 							<img src="img/posters/springjam2017.jpg" title="Spring Jam Post Malone" height="150">
 							<p><br></p>
